{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 231,
  "lineage": "21f059f2-aeae-7351-a18b-9d360cd31214",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b05e37e7c3dc7533",
            "domain": "vpc",
            "id": "eipalloc-0b05e37e7c3dc7533",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-238-133-202.compute-1.amazonaws.com",
            "public_ip": "34.238.133.202",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip1"
            },
            "tags_all": {
              "Name": "eip1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "PublicWebTemplate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0588935a949f9ff17",
            "arn": "arn:aws:ec2:us-east-1:785756445003:instance/i-03ded88132adfb129",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03ded88132adfb129",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "source_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07b3cbdfc0ca2bc47",
            "private_dns": "ip-10-0-1-243.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.243",
            "public_dns": "ec2-54-175-164-199.compute-1.amazonaws.com",
            "public_ip": "54.175.164.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00d2af267396e1ae3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-058dc20e41e2fb96f",
            "tags": {
              "Name": "web-asg"
            },
            "tags_all": {
              "Name": "web-asg"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08a02361e937c049b"
            ]
          },
          "dependencies": [
            "aws_security_group.alb-security-group",
            "aws_security_group.ssh-security-group",
            "aws_security_group.webserver-security-group",
            "aws_subnet.public-web-subnet-1",
            "aws_vpc.vpc_01",
            "data.aws_ami.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private-app-template",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0588935a949f9ff17",
            "arn": "arn:aws:ec2:us-east-1:785756445003:instance/i-0fec51e778c0ea135",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fec51e778c0ea135",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "source_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06a777da6f1221fa9",
            "private_dns": "ip-10-0-3-186.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.186",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cf75d1f47a5732a2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08e802b444e74f8e7",
            "tags": {
              "Name": "app-asg"
            },
            "tags_all": {
              "Name": "app-asg"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-086bf4ccc4279122b"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-security-group",
            "aws_subnet.private-app-subnet-1",
            "aws_vpc.vpc_01",
            "data.aws_ami.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785756445003:internet-gateway/igw-0fdddca33b1237f6c",
            "id": "igw-0fdddca33b1237f6c",
            "owner_id": "785756445003",
            "tags": {
              "Name": "Test IGW"
            },
            "tags_all": {
              "Name": "Test IGW"
            },
            "vpc_id": "vpc-0df00bac71b8544fc"
          },
          "dependencies": [
            "aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "application-load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:785756445003:loadbalancer/app/web-external-load-balancer/71ee676b82a49d22",
            "arn_suffix": "app/web-external-load-balancer/71ee676b82a49d22",
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-external-load-balancer-499432126.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:785756445003:loadbalancer/app/web-external-load-balancer/71ee676b82a49d22",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-external-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-098cfbd1bbe4fb96e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-038770fe04d8b1835"
              },
              {
                "subnet_id": "subnet-058dc20e41e2fb96f"
              }
            ],
            "subnets": [
              "subnet-038770fe04d8b1835",
              "subnet-058dc20e41e2fb96f"
            ],
            "tags": {
              "Name": "App load balancer"
            },
            "tags_all": {
              "Name": "App load balancer"
            },
            "vpc_id": "vpc-0df00bac71b8544fc",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb-security-group",
            "aws_subnet.public-web-subnet-1",
            "aws_subnet.public-web-subnet-2",
            "aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:785756445003:listener/app/web-external-load-balancer/71ee676b82a49d22/3b071cb48f1814b2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:785756445003:listener/app/web-external-load-balancer/71ee676b82a49d22/3b071cb48f1814b2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:785756445003:loadbalancer/app/web-external-load-balancer/71ee676b82a49d22",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.application-load-balancer",
            "aws_security_group.alb-security-group",
            "aws_subnet.public-web-subnet-1",
            "aws_subnet.public-web-subnet-2",
            "aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:785756445003:targetgroup/appbalancertg/78248ec826dfd356",
            "arn_suffix": "targetgroup/appbalancertg/78248ec826dfd356",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:785756445003:targetgroup/appbalancertg/78248ec826dfd356",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "appbalancertg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0df00bac71b8544fc"
          },
          "dependencies": [
            "aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web-attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:785756445003:targetgroup/appbalancertg/78248ec826dfd356-20231125085346703300000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:785756445003:targetgroup/appbalancertg/78248ec826dfd356",
            "target_id": "i-03ded88132adfb129"
          },
          "dependencies": [
            "aws_instance.PublicWebTemplate",
            "aws_lb_target_group.alb_target_group",
            "aws_security_group.alb-security-group",
            "aws_security_group.ssh-security-group",
            "aws_security_group.webserver-security-group",
            "aws_subnet.public-web-subnet-1",
            "aws_vpc.vpc_01",
            "data.aws_ami.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b05e37e7c3dc7533",
            "connectivity_type": "public",
            "id": "nat-0a5396e911eec7005",
            "network_interface_id": "eni-0ed05e9385e007102",
            "private_ip": "10.0.2.223",
            "public_ip": "34.238.133.202",
            "subnet_id": "subnet-038770fe04d8b1835",
            "tags": {
              "Name": "nat1"
            },
            "tags_all": {
              "Name": "nat1"
            }
          },
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_subnet.public-web-subnet-2",
            "aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785756445003:route-table/rtb-0e1b41d881f691b78",
            "id": "rtb-0e1b41d881f691b78",
            "owner_id": "785756445003",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a5396e911eec7005",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table"
            },
            "tags_all": {
              "Name": "Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df00bac71b8544fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_nat_gateway.nat_1",
            "aws_subnet.public-web-subnet-2",
            "aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785756445003:route-table/rtb-00edcff1f38f1a3b1",
            "id": "rtb-00edcff1f38f1a3b1",
            "owner_id": "785756445003",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fdddca33b1237f6c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df00bac71b8544fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat_route_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd3a75a698ed1029",
            "route_table_id": "rtb-0e1b41d881f691b78",
            "subnet_id": "subnet-08e802b444e74f8e7"
          },
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_nat_gateway.nat_1",
            "aws_route_table.private-route-table",
            "aws_subnet.private-app-subnet-1",
            "aws_subnet.public-web-subnet-2",
            "aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat_route_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0319649cd3f8e96a5",
            "route_table_id": "rtb-0e1b41d881f691b78",
            "subnet_id": "subnet-07cb6e4bfa4141faa"
          },
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_nat_gateway.nat_1",
            "aws_route_table.private-route-table",
            "aws_subnet.private-app-subnet-2",
            "aws_subnet.public-web-subnet-2",
            "aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat_route_db_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044af482720ad8d47",
            "route_table_id": "rtb-0e1b41d881f691b78",
            "subnet_id": "subnet-07d538d15f13f89b0"
          },
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_nat_gateway.nat_1",
            "aws_route_table.private-route-table",
            "aws_subnet.private-db-subnet-1",
            "aws_subnet.public-web-subnet-2",
            "aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat_route_db_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aeb924ce1e3cb4ec",
            "route_table_id": "rtb-0e1b41d881f691b78",
            "subnet_id": "subnet-08f082329efa7eb7b"
          },
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_nat_gateway.nat_1",
            "aws_route_table.private-route-table",
            "aws_subnet.private-db-subnet-2",
            "aws_subnet.public-web-subnet-2",
            "aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-1-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d47a2ca81f06e68",
            "route_table_id": "rtb-00edcff1f38f1a3b1",
            "subnet_id": "subnet-058dc20e41e2fb96f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-route-table",
            "aws_subnet.public-web-subnet-1",
            "aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-2-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09973cf574a874fbb",
            "route_table_id": "rtb-00edcff1f38f1a3b1",
            "subnet_id": "subnet-038770fe04d8b1835"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-route-table",
            "aws_subnet.public-web-subnet-2",
            "aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785756445003:security-group/sg-098cfbd1bbe4fb96e",
            "description": "Enable http/https access on port 80/443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-098cfbd1bbe4fb96e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ALB Security Group",
            "name_prefix": "",
            "owner_id": "785756445003",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB Security group"
            },
            "tags_all": {
              "Name": "ALB Security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df00bac71b8544fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785756445003:security-group/sg-0dbf252f8f0c63edc",
            "description": "Enable MYSQL access on port 3306",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dbf252f8f0c63edc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MYSQL access",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08a02361e937c049b"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Database server Security Group",
            "name_prefix": "",
            "owner_id": "785756445003",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Database Security group"
            },
            "tags_all": {
              "Name": "Database Security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df00bac71b8544fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-security-group",
            "aws_security_group.ssh-security-group",
            "aws_security_group.webserver-security-group",
            "aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785756445003:security-group/sg-086bf4ccc4279122b",
            "description": "Enable ssh access on port 22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-086bf4ccc4279122b",
            "ingress": [
              {
                "cidr_blocks": [
                  "49.37.114.130/32"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SSH Access",
            "name_prefix": "",
            "owner_id": "785756445003",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh Security group"
            },
            "tags_all": {
              "Name": "ssh Security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df00bac71b8544fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785756445003:security-group/sg-08a02361e937c049b",
            "description": "Enable http/https access on port 80/443 via ALB and ssh via ssh sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08a02361e937c049b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-098cfbd1bbe4fb96e"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "https access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-098cfbd1bbe4fb96e"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-086bf4ccc4279122b"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Web server Security Group",
            "name_prefix": "",
            "owner_id": "785756445003",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web server Security group"
            },
            "tags_all": {
              "Name": "Web server Security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df00bac71b8544fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-security-group",
            "aws_security_group.ssh-security-group",
            "aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-app-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785756445003:subnet/subnet-08e802b444e74f8e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e802b444e74f8e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "785756445003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1 | App Tier"
            },
            "tags_all": {
              "Name": "Private Subnet 1 | App Tier"
            },
            "vpc_id": "vpc-0df00bac71b8544fc"
          },
          "dependencies": [
            "aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-app-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785756445003:subnet/subnet-07cb6e4bfa4141faa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07cb6e4bfa4141faa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "785756445003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 2 | App Tier"
            },
            "tags_all": {
              "Name": "Private Subnet 2 | App Tier"
            },
            "vpc_id": "vpc-0df00bac71b8544fc"
          },
          "dependencies": [
            "aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-db-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785756445003:subnet/subnet-07d538d15f13f89b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d538d15f13f89b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "785756445003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1 | Db Tier"
            },
            "tags_all": {
              "Name": "Private Subnet 1 | Db Tier"
            },
            "vpc_id": "vpc-0df00bac71b8544fc"
          },
          "dependencies": [
            "aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-db-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785756445003:subnet/subnet-08f082329efa7eb7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f082329efa7eb7b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "785756445003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 2 | Db Tier"
            },
            "tags_all": {
              "Name": "Private Subnet 2 | Db Tier"
            },
            "vpc_id": "vpc-0df00bac71b8544fc"
          },
          "dependencies": [
            "aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-web-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785756445003:subnet/subnet-058dc20e41e2fb96f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058dc20e41e2fb96f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "785756445003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 1"
            },
            "tags_all": {
              "Name": "Public Subnet 1"
            },
            "vpc_id": "vpc-0df00bac71b8544fc"
          },
          "dependencies": [
            "aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-web-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785756445003:subnet/subnet-038770fe04d8b1835",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038770fe04d8b1835",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "785756445003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 2"
            },
            "tags_all": {
              "Name": "Public Subnet 2"
            },
            "vpc_id": "vpc-0df00bac71b8544fc"
          },
          "dependencies": [
            "aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785756445003:vpc/vpc-0df00bac71b8544fc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0769824055fb7b8c3",
            "default_route_table_id": "rtb-0d3279b3ee8dd679d",
            "default_security_group_id": "sg-0ef874315ed017518",
            "dhcp_options_id": "dopt-0a690e461ac971f14",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0df00bac71b8544fc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d3279b3ee8dd679d",
            "owner_id": "785756445003",
            "tags": {
              "Name": "central-network"
            },
            "tags_all": {
              "Name": "central-network"
            }
          }
        }
      ]
    }
  ]
}